<resources>
    <string name="app_name">Vet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Configurações</string>
    <string name="selectBirthday">Selecione a sua data de aniversário</string>
    <string name="text_logo_1">VET</string>
    <string name="text_logo_2">MOBILE</string>
    <string name="text_pet">Pet</string>
    <string name="breed_pet">Raça</string>
    <string name="text_email">E-mail</string>
    <string name="text_phone">Telefone</string>
    <string name="text_password">Senha</string>
    <string name="text_confirm_password">Confirmar Senha</string>
    <string name="text_woman">Mulher</string>
    <string name="text_man">Homem</string>
    <string name="text_birthday">Nascimento</string>
    <string name="text_upload_photo">Minha Foto</string>
    <string name="text_continue">Continuar</string>
    <string name="choose_image">Carregar Foto</string>
    <string name="wrongBirthdayDate">Algo errado. Selecione sua data de aniversário corretamente.</string>
    <string name="errorFields">Preencha os campos corretamente.</string>
    <string name="noTypeUserSelected">Escolha uma das opções para cliente ou veterinário.</string>
    <string name="text_finish">Finalizar</string>
    <string name="text_add_other">Adicionar Outro</string>
    <string name="text_login">Login</string>
    <string name="text_name">Nome</string>
    <string name="text_enter">Entrar</string>
    <string name="text_register">Cadastrar</string>
    <string name="text_vet">Veterinário(a)</string>
    <string name="text_client">Cliente</string>
    <string name="text_Kind">Tipo</string>
    <string name="text_male">M</string>
    <string name="text_female">F</string>
    <string name="text_select_birthday">Data de adoção ou nascimento:</string>
    <string name="text_start_hour">Hora Inicial:</string>
    <string name="text_final_hour">Hora Final:</string>
    <string name="errorNoGenderSelected">Para prosseguir, selecione o sexo.</string>
    <string name="const_male">Masculino</string>
    <string name="const_female">Feminino</string>
    <string name="const_typeUserNone">0</string>
    <string name="const_typeUserVet">1</string>
    <string name="const_typeUserClient">2</string>
    <string name="key_typeUser">KEY_TYPE_USER</string>
    <string name="key_current_user">KEY_CURRENT_USER</string>
    <string name="key_user_id">KEY_USER_ID</string>
    <string name="key_selected_date">KEY_SELECTED_DATE</string>
    <string name="text_address">Endereço</string>
    <string name="text_address_number">Nº</string>
    <string name="text_neighborhood">Bairro</string>
    <string name="text_city">Cidade</string>
    <string name="text_uf">UF</string>
    <string name="text_cep">CEP</string>
    <string name="text_crmv">CRMV</string>
    <string name="text_domain_area">Especialidade</string>
    <string name="text_mark">Marcar</string>
    <string name="text_assistance">Atendimento</string>
    <string name="text_assistances">Atendimentos</string>
    <string name="text_mine1">Minhas</string>
    <string name="text_mine2">Meus</string>
    <string name="text_mine3">Minha</string>
    <string name="text_mine4">Meu</string>
    <string name="text_enquiries">Consultas</string>
    <string name="text_tips">Dicas</string>
    <string name="text_pets">Pets</string>
    <string name="text_my_data">Meus Dados</string>
    <string name="text_land_registry">Cadastrais</string>
    <string name="text_nexts">Próximos</string>
    <string name="text_reports">Relatórios</string>
    <string name="text_availability">Disponibilidade</string>
    <string name="text_pet_name">Nome do Pet</string>
    <string name="text_select_pet_photo">Para continuar, selecione uma imagem do Pet.</string>
    <string name="text_database_try_saving_object_null">Não foi possível salvar os dados</string>
    <string name="text_internal_error_01">Erro interno - 01</string>
    <string name="text_internal_error_02">Erro interno - 02</string>
    <string name="text_const_type_user_vet">VET</string>
    <string name="text_const_type_user_client">CLIENT</string>
    <string name="text_save_user_successful">Usuário salvo com sucesso</string>
    <string name="text_save_pet_successful">Animal salvo com sucesso</string>
    <string name="text_save_data_successful">Dados salvo com sucesso</string>
    <string name="text_user_login_error">Usuário inválido ou indisponível. Escolha outro</string>
    <string name="text_wrong_user_login">Usuário inválido</string>
    <string name="text_wrong_user_password">Senha inválida</string>
    <string name="text_doing_logout">Saindo...</string>
    <string name="text_select_future_date">Data inválida. Selecione uma data futura.</string>
    <string name="text_no_date_selected">Para prosseguir, selecione uma data.</string>
    <string name="text_empty_hour">——:——</string>
    <string name="text_done">Pronto</string>
    <string name="text_done_to_save_data">Pronto, as alterações serão aplicadas quando você clicar no botão SALVAR.</string>
    <string name="text_no_hour_to_save">Nenhum horário para salvar.</string>
</resources>
