<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="android.vetmobile.com.vet.RegisterMoreInfoVetActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:src="@drawable/img_background"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:alpha="0.7">
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="107dp"
                android:layout_height="132dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="107dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="@string/text_logo_1"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="107dp"
                android:layout_height="14dp"
                android:layout_gravity="center"
                android:text="@string/text_logo_2"
                android:textAlignment="center"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/address_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/text_address"/>

            <EditText
                android:id="@+id/addressnumber_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:hint="@string/text_address_number"/>

            <EditText
                android:id="@+id/neighborhood_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/text_neighborhood"/>

            <EditText
                android:id="@+id/city_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/text_city"/>

            <EditText
                android:id="@+id/ufcity_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/text_uf"/>

            <EditText
                android:id="@+id/cepcity_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:hint="@string/text_cep"/>

            <EditText
                android:id="@+id/crv_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/text_crmv"/>

            <EditText
                android:id="@+id/domainarea_field_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/text_domain_area"/>

            <Button
                android:id="@+id/finish_button_id"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="44dp"
                android:text="@string/text_finish"
                android:background="@color/white"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="32dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
