<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="android.vetmobile.com.vet.HomeVetActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:src="@drawable/img_background"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:alpha="0.7">
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/item1_list_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/earlsGreen"
                android:alpha="0.8"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/calendar"
                    android:layout_margin="16dp"
                    android:contentDescription="" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_nexts"
                        android:textAllCaps="true"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        android:textColor="#393765"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_assistances"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="#393765"
                        android:textAlignment="center"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item2_list_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightBrown"
                android:alpha="0.8"
                android:gravity="right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_mine2"
                        android:textAllCaps="true"
                        android:textSize="38sp"
                        android:textStyle="bold"
                        android:textColor="#6D0072"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_reports"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="#6D0072"
                        android:textAlignment="center"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/list"
                    android:layout_margin="16dp"
                    android:contentDescription="" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item3_list_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/venetianRed"
                android:alpha="0.8"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/lamp"
                    android:layout_margin="16dp"
                    android:contentDescription="" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_mine3"
                        android:textAllCaps="true"
                        android:textSize="38sp"
                        android:textStyle="bold"
                        android:textColor="#FFFFAC"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_availability"
                        android:textAllCaps="true"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="#FFFFAC"
                        android:textAlignment="center"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item4_list_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/flirt"
                android:alpha="0.8"
                android:gravity="right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_my_data"
                        android:textAllCaps="true"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="#C4F7C8"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_land_registry"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="#C4F7C8"
                        android:textAlignment="center"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/settings"
                    android:layout_margin="16dp"
                    android:contentDescription="" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
