<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="android.vetmobile.com.vet.HomeClientActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:src="@drawable/img_background"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:alpha="0.7">
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/item1_list_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/earlsGreen"
                android:alpha="0.8"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/calendar"
                    android:layout_margin="16dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_mark"
                        android:textAllCaps="true"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        android:textColor="#393765"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_assistance"
                        android:textAllCaps="true"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="#393765"
                        android:textAlignment="center"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item2_list_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightBrown"
                android:alpha="0.8"
                android:gravity="right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_mine1"
                        android:textAllCaps="true"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        android:textColor="#6D0072"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_enquiries"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="#6D0072"
                        android:textAlignment="center"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/list"
                    android:layout_margin="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item3_list_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/venetianRed"
                android:alpha="0.8"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/lamp"
                    android:layout_margin="16dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_tips"
                        android:textAllCaps="true"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        android:textColor="#FFFFAC"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_pets"
                        android:textAllCaps="true"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:textColor="#FFFFAC"
                        android:textAlignment="center"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item4_list_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/flirt"
                android:alpha="0.8"
                android:gravity="right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_my_data"
                        android:textAllCaps="true"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="#C4F7C8"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_land_registry"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="#C4F7C8"
                        android:textAlignment="center"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/settings"
                    android:layout_margin="16dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/homeclient_fab1_id"
        android:layout_width="@dimen/standard_55"
        android:layout_height="@dimen/standard_55"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/venetianRed"
        app:borderWidth="0dp"
        android:src="@drawable/logout"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/homeclient_fab_id"
        android:layout_width="@dimen/standard_120"
        android:layout_height="@dimen/standard_120"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccent"
        app:borderWidth="0dp"
        android:src="@drawable/filter_variant"/>

</RelativeLayout>
